## Step 3. Position the Bird and Poles Next, we create a div as bird and two poles inside the game-area div. We use the CSS attribute `background` to set the background of the bird div to be an image. We then use the CSS attribute `background-size:contain;` to make the background image scale as large as possible within its container without cropping or stretching the image. If the container is larger than the image, this will result in image tiling. Thus we use the CSS attribute `background-repeat:no-repeat` to prevent image tiling.

--- a/style.css
+++ b/style.css
@@ -24,8 +24,37 @@
 
 #game-area {
   margin: auto;
+  position: relative;
   width: 400px;
   height: 300px;
   border: 2px solid green;
   background-color: deepskyblue;
+  overflow: hidden;
+}
+
+#bird {
+  position: absolute;
+  background: url("https://usercontent.one/wp/compucademy.net/wp-content/uploads/2020/11/robbybird.png?media=1647780690");
+  height: 27px;
+  width: 42px;
+  background-size: contain;
+  background-repeat: no-repeat;
+  top: 20%;
+  left: 15%;
+}
+
+.pole {
+  position: absolute;
+  height: 100px;
+  width: 30px;
+  background-color: green;
+  right: 0px;
+}
+
+#pole-1 {
+  top: 0;
+}
+
+#pole-2 {
+  bottom: 0;
 }
